@@ -307,13 +307,16 @@ def decorate_view(view, args, method):
     :param args: the args to use for the decoration
     :param method: the HTTP method
     """
-    def wrapper(context, request):
+    def wrapper(request):
         # if the args contain a klass argument then use it to resolve the view
         # location (if the view argument isn't a callable)
         ob = None
         view_ = view
         if 'klass' in args:
-            ob = args['klass'](request=request, context=context)
+            params = dict(request=request)
+            if 'factory' in args and 'acl' not in args:
+                params['context'] = args['factory'](request)
+            ob = args['klass'](**params)
             if isinstance(view, basestring):
                 view_ = getattr(ob, view.lower())
 
