@@ -2,6 +2,8 @@
 =================
 
 - add support for dynamic validation schemas for resources.
+- add support for context factory.
+
 
 0.11 - 2012-10-22
 =================
